Refactor JsonReportingExtension to improve null safety
- Introduced requireNonNull checks to ensure non-null parameters.
- Updated TestResult to use a record for better clarity.
- Enhanced logging for JSON report writing.